[gd_scene load_steps=8 format=3 uid="uid://b420sm5h7hulj"]

[ext_resource type="Script" path="res://WorldObjects/static_body_2d.gd" id="1_77cwt"]
[ext_resource type="Texture2D" uid="uid://ccpdcenraun2g" path="res://Assets/pixel-art-winter-tree-png.webp" id="2_okg62"]
[ext_resource type="AudioStream" uid="uid://t08a20lavm1c" path="res://Assets/CHOPPING TREE - Gaming Sound Effects HD FREE NO Copyright.mp3" id="3_jx2vy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvaw4"]
size = Vector2(30, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hjo85"]
size = Vector2(76, 130)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y5cq0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_goa1a"]
bg_color = Color(0.411765, 0.690196, 0, 1)

[node name="Tree" type="StaticBody2D"]
script = ExtResource("1_77cwt")

[node name="Pixel-art-winter-tree-png" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, -48)
scale = Vector2(0.0510417, 0.0484375)
texture = ExtResource("2_okg62")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -6)
shape = SubResource("RectangleShape2D_wvaw4")

[node name="chop_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chop_zone"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_hjo85")
debug_color = Color(0.996078, 0, 0.207843, 0.419608)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -14.0
offset_top = -99.0
offset_right = 14.0
offset_bottom = -95.0
theme_override_styles/background = SubResource("StyleBoxFlat_y5cq0")
theme_override_styles/fill = SubResource("StyleBoxFlat_goa1a")
max_value = 200.0
value = 75.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="ChopSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jx2vy")
volume_db = 14.696
max_distance = 1000.0

[connection signal="body_entered" from="chop_zone" to="." method="_on_chop_zone_body_entered"]
[connection signal="body_exited" from="chop_zone" to="." method="_on_chop_zone_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
